# ecom_app

./: .gitignore  .pre-commit-config.yaml  Dockerfile_example  alembic.ini  alembic_sync.ini  celerybeat-schedule.bak  docker-compose.prod.yml  docker-compose.yml  ecommerce.db  pyproject.toml  requirements_dev.txt
app/: Dockerfile  Dockerfile.prod  main.py  requirements.txt  schemas.py  tasks.py
app/backend/: db.py  db_depends.py  db_sync.py
app/migrations/: env.py
app/migrations/versions/: 0778fcfd9c80_alter_review_model_remove_rating_id_col.py  38565ff97b2f_initial_async_migration.py  52b092c5285c_alter_user_table_is_activae_default_.py  5a13c2d11caf_create_user_model.py  5a8ed1b3213a_add_reviw_and_rating_models.py  88c62de34604_alter_user_table_is_activae_default_true.py  c5b968f306f9_alter_user_table_is_suplier_is_supplier.py  dad34f596ef3_alter_review_model_add_rating_id_col.py  f0d446edda01_alter_review_alter_commend_date_add_.py  f7950d6ec703_alter_review_model_alter_ratings_single_.py
app/models/: __init__.py  category.py  products.py  reviews.py  user.py
app/routers/: auth.py  category.py  permissions.py  products.py  reviews.py
app/utils/: log.py  timing.py
infra/: nginx.conf
templates/: index_deprecitated.html
