[tool.poetry]
name = "ecom-fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^4.1.0"
fastapi = {extras = ["standard"], version = "^0.115.8"}
slugify = "^0.0.1"
python-dotenv = "^1.0.1"
asyncpg = "^0.30.0"
alembic = "^1.14.1"
passlib = "^1.7.4"
bcrypt = "4.0.1"
python-multipart = "^0.0.20"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
itsdangerous = "^2.2.0"
loguru = "^0.7.3"
celery = "^5.4.0"
redis = "^5.2.1"
gevent = "^24.11.1"
flower = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
